# holbertonschool-portfolio

./: AUTHORS.md  LICENSE  README.md
app/: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALLATION.md  README.md  compose.prod.yml
app/back-end/: .dockerignore  .env.dev.example  .env.prod.example  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
app/back-end/DO_NOT_README/: notes_on_git.md  notes_on_postgress.md
app/back-end/DO_NOT_README/django/: notes_on_django_jwt.md
app/back-end/accounts/: admin.py  authentication.py  models.py  serializers.py  urls.py  validators.py  views.py  views_auth.py
app/back-end/accounts/management/commands/: inspect_serializers.py
app/back-end/accounts/migrations/: 0001_initial.py
app/back-end/config/: settings.py  urls.py
app/back-end/core/: models.py
app/back-end/docs/: notes_on_bash.md  notes_on_django.md  notes_on_django_tests.md  notes_on_git.md  notes_on_postgress.md  notes_on_postman.md  notes_on_uv.md
app/back-end/docs/django/: notes_on_django.md
app/back-end/ingredients/: admin.py  models.py  serializers.py  urls.py  views.py
app/back-end/ingredients/management/commands/: create_unit_kinds.py  create_units.py
app/back-end/postman/: README.md
app/back-end/recipes/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
app/back-end/recipes/management/commands/: create_difficulties.py  create_recipe_statuses.py
app/back-end/scripts/: README.md  destroy_initialize_postgres.sh  empty_psql_django_db.sh  init_postgres_django.sh  seed_data.py
project-reports/: stage1_description.md  (+5 more)
(+205 files in other folders)
